fixtures/specs/snapshots/muse_spec__tests__error-cycle.snap
---
source: crates/muse-spec/src/lib.rs
expression: result
---
ERROR
DependencyCycle at programs.generate.nodes: dependency graph contains a cycle
