fixtures/specs/snapshots/muse_spec__tests__error-duplicate-binding.snap
---
source: crates/muse-spec/src/lib.rs
expression: result
---
ERROR
UnknownArgument at programs.generate.nodes.calculate.params.amount: binding amount is declared as both input and parameter
