fixtures/specs/snapshots/muse_spec__tests__error-duplicate-node.snap
---
source: crates/muse-spec/src/lib.rs
expression: result
---
ERROR
DuplicateNode at programs.generate.nodes.duplicate.child: duplicate expanded node
