fixtures/specs/snapshots/muse_spec__tests__error-earth-threshold-missing-config.snap
---
source: crates/muse-spec/src/lib.rs
expression: result
---
ERROR
MissingArgument at programs.generate.nodes.bad.args.threshold: required scalar configuration for threshold is missing
