fixtures/specs/snapshots/muse_spec__tests__error-earth-vector-dot-type.snap
---
source: crates/muse-spec/src/lib.rs
expression: result
---
ERROR
TypeMismatch at programs.generate.nodes.bad.args.a: expected VectorField, got ScalarField from $input.scalar
