fixtures/specs/snapshots/muse_spec__tests__error-earth-vector-magnitude-unknown-config.snap
---
source: crates/muse-spec/src/lib.rs
expression: result
---
ERROR
UnknownArgument at programs.generate.nodes.bad.args.unexpected: unknown argument for vector_magnitude
