fixtures/specs/snapshots/muse_spec__tests__error-expression-binding.snap
---
source: crates/muse-spec/src/lib.rs
expression: result
---
ERROR
TypeMismatch at programs.generate.nodes.calculate.inputs.source: expected ScalarField, got Scalar from $input.source
