fixtures/specs/snapshots/muse_spec__tests__error-malformed-yaml.snap
---
source: crates/muse-spec/src/lib.rs
expression: result
---
ERROR
MalformedYaml: error: line 1 column 11: expected mapping start
 --> <input>:1:11
  |
1 | programs: [
  |           ^ expected mapping start
