fixtures/specs/snapshots/muse_spec__tests__error-missing-arg.snap
---
source: crates/muse-spec/src/lib.rs
expression: result
---
ERROR
MissingArgument at programs.generate.nodes.filter.args.field: required argument for laplacian is missing
