fixtures/specs/snapshots/muse_spec__tests__error-missing-config.snap
---
source: crates/muse-spec/src/lib.rs
expression: result
---
ERROR
MissingArgument at programs.generate.nodes.constant.args.value: required scalar configuration for constant is missing
