fixtures/specs/snapshots/muse_spec__tests__error-recipe-binding.snap
---
source: crates/muse-spec/src/lib.rs
expression: result
---
ERROR
TypeMismatch at programs.generate.nodes.broken.inputs.field: expected ScalarField, got Scalar from $input.incoming
